[gd_scene load_steps=10 format=3 uid="uid://bqp0rlaj5w25g"]

[ext_resource type="Script" path="res://2d/source/scripts/builder/menu/project.gd" id="1"]
[ext_resource type="Theme" uid="uid://b1mllftlbva2u" path="res://2d/assets/themes/theme.tres" id="2"]
[ext_resource type="Script" path="res://2d/source/scripts/builder/menu/dictionaries.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://dd5wl3rf5exwl" path="res://2d/source/scenes/scene_header.tscn" id="4"]
[ext_resource type="Script" path="res://2d/source/scripts/builder/menu/library.gd" id="5"]
[ext_resource type="Script" path="res://2d/source/scripts/builder/menu/menu.gd" id="6"]
[ext_resource type="Theme" uid="uid://bwxso8a50xc5l" path="res://2d/assets/themes/panel_blue.tres" id="7"]
[ext_resource type="Script" path="res://2d/source/scripts/builder/menu/events.gd" id="8"]
[ext_resource type="Script" path="res://2d/source/scripts/builder/menu/audio.gd" id="9"]

[node name="Control" type="Node2D"]
script = ExtResource("6")

[node name="Panel" type="Panel" parent="."]
offset_top = 30.0
offset_right = 1024.0
offset_bottom = 79.0
theme = ExtResource("7")

[node name="MenuProject" type="MenuButton" parent="."]
offset_left = 9.0
offset_top = 46.0
offset_right = 118.0
offset_bottom = 74.0
focus_mode = 2
theme = ExtResource("2")
action_mode = 1
text = "Project"
flat = false
switch_on_hover = true
script = ExtResource("1")

[node name="MenuDictionaries" type="MenuButton" parent="."]
offset_left = 126.0
offset_top = 46.0
offset_right = 254.0
offset_bottom = 74.0
focus_mode = 2
theme = ExtResource("2")
action_mode = 1
text = "Dictionaries"
flat = false
switch_on_hover = true
script = ExtResource("3")

[node name="MenuEvents" type="MenuButton" parent="."]
offset_left = 262.0
offset_top = 46.0
offset_right = 358.0
offset_bottom = 74.0
focus_mode = 2
theme = ExtResource("2")
action_mode = 1
text = "Events"
flat = false
switch_on_hover = true
script = ExtResource("8")

[node name="MenuAudio" type="MenuButton" parent="."]
offset_left = 366.0
offset_top = 46.0
offset_right = 449.0
offset_bottom = 74.0
focus_mode = 2
theme = ExtResource("2")
action_mode = 1
text = "Audio"
flat = false
switch_on_hover = true
script = ExtResource("9")

[node name="MenuLibrary" type="MenuButton" parent="."]
offset_left = 456.0
offset_top = 46.0
offset_right = 544.0
offset_bottom = 74.0
focus_mode = 2
theme = ExtResource("2")
action_mode = 1
text = "Library"
flat = false
switch_on_hover = true
script = ExtResource("5")

[node name="SceneHeader" parent="." instance=ExtResource("4")]

[node name="Label" parent="SceneHeader" index="2"]
offset_left = 8.0
offset_right = 1016.0
text = "Builder"

[node name="Underline" parent="SceneHeader" index="3"]
points = PackedVector2Array(1024, 0, 512.05, 0, 433.572, 0, 0, 0)

[connection signal="tree_exiting" from="." to="." method="_on_Node2D_tree_exiting"]
[connection signal="tree_exiting" from="MenuProject" to="MenuProject" method="_on_MenuProject_tree_exiting"]
[connection signal="child_exiting_tree" from="MenuDictionaries" to="MenuDictionaries" method="_on_exiting_tree"]
[connection signal="child_exiting_tree" from="MenuEvents" to="MenuEvents" method="_on_exiting_tree"]
[connection signal="child_exiting_tree" from="MenuAudio" to="MenuAudio" method="_on_exiting_tree"]
[connection signal="child_exiting_tree" from="MenuLibrary" to="MenuLibrary" method="_on_exiting_tree"]

[editable path="SceneHeader"]
